# photos_sorter

./: .gitignore  CNAME  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml  tests.yml
app/: Makefile  requirements.txt  run.py
app/photos_sorter/: __init__.py  app.py  strings.py
app/photos_sorter/assets/: icon.icns
app/scripts/: make_appimage.sh
app/tests/: conftest.py
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/scripts/: app.js
photos_sorter/: app.py  config.py  core.py  strings.py
scripts/: make_dmg.sh
tests/: test_core.py
