[project]
name = "photos-sorter"
version = "0.1.0"
description = "A cross-platform desktop application that organises photos and videos into date-based folder trees by reading EXIF metadata."
requires-python = ">=3.13"
dependencies = [
    "pillow",
    "pillow-heif",
]

[dependency-groups]
dev = [
    "pytest",
    "pyinstaller",
    "piexif>=1.1.3",
]

[project.scripts]
photos-sorter = "photos_sorter.app:main"
